# monorepo

./: default.nix
nix/: pkgs.nix  psalm.nix
uphub/: GLOSSARY  default.nix
uphub/database/: README  default.nix  setup.sh  sqitch.conf  sqitch.plan
uphub/database/deploy/: monitors_table.sql  polls_table.sql  schedule_view.sql  uphub_schema.sql
uphub/database/revert/: monitors_table.sql  polls_table.sql  schedule_view.sql  uphub_schema.sql
uphub/database/verify/: monitors_table.sql  polls_table.sql  schedule_view.sql  uphub_schema.sql
uphub/uphubconf/: README  composer.json  default.nix  psalm.xml
uphub/uphubconf/boot/: index.php
uphub/uphubconf/src/uphubconf/: main.php
uphub/uphubd/: README  default.nix  uphubd.cabal
uphub/uphubd/main/: uphubd_scheduler.hs
uphub/uphubd/src/Database/: Postgresql.hs
uphub/uphubd/src/System/Zmq4/: Cbor.hs  Extra.hs
uphub/uphubd/src/Uphubd/: Monitor.hs  Scheduler.hs
uphub/uphubd/src/Uphubd/Main/: Uphubd_scheduler.hs
